# SlamDemo

./: Cargo.toml  flake.nix  index.html
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: qql5lxf2m290wnk1yl9gfbgf193xwjvy-source  vp0g3klfm6llfadc2x91xc612a5l1lz3-source
frontend/: main.py
lidar/: lidar.ino  lidar_demo.py  lidar_scanner.py  scans.data
robot/: Cargo.toml
robot/src/: main.rs
simulation/: Cargo.toml
simulation/src/: main.rs  server.rs
slam/: Cargo.toml
slam/preprocess_data/: process.py
slam/src/: main.rs
src/: main.rs
