[package]
name = "slam_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
ecolor = "0.30.0"
eframe = "0.30.0"
egui_extras = {version = "0.30.0", features = ["all_loaders"]}
egui_plot = "0.30.0"
env_logger = { version="0.11.6", default-features = false, features = [
    "auto-color",
    "humantime",
] }
image = "0.25.5"
rfd = "0.15.2"
