[package]
name = "simulation"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {version = "1.44.1", features = ["full"]}
tokio-tungstenite = {version = "0.26.2", features = ["rustls-tls-webpki-roots"] }
flate2 = { version = "1.0.17", features = ["zlib-rs"], default-features = false }
futures-util = "0.3.29"
log = "0.4.27"
env_logger = "0.11.7"
image = "0.25.6"
